--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -1,7 +1,7 @@
 <ul class="media-list ytGrid">
-	<li v-for="media in mediaList" class="wdt-50">
-	<div class="ytContainer">
-	<youtube :video-id="media.videoId" player-width="400" player-height="300"></youtube>
+	<li v-for="media in mediaList" class="wdt-33">
+	<div class="ytContainer" class="wdt-95">
+	<youtube :video-id="media.videoId" player-width="100%" player-height="300"></youtube>
 	</div>
 	</li>
 </ul>
