--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -1,6 +1,6 @@
 <ul class="media-list ytGrid">
 	<li v-for="media in mediaList" class="wdt-33">
-	<div class="ytContainer" class="wdt-95">
+	<div class="wdt-95">
 	<youtube :video-id="media.videoId" player-width="100%" player-height="300"></youtube>
 	</div>
 	</li>
