--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -1,7 +1,11 @@
 <ul class="media-list ytGrid">
 	<li v-for="media in mediaList">
-	<div class="wdt-95">
-	<youtube :video-id="media.videoId" player-width="100%" player-height="300"></youtube>
+	<div>
+		<youtube :video-id="media.videoId" player-width="100%" player-height="300"></youtube>
+		<div>
+			<h3> {{ media.title }} </h3>
+			<p> {{ media.description }} </p>
+		</div>
 	</div>
 	</li>
 </ul>
