--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -6,6 +6,18 @@
 		  width:33%;
 		  padding-top:100px;
 		  
-		  div { width:95%}
+		  .ytContainer { 
+			width:95%;
+			height: 500px;
+		  
+		  }
+	  }
+	  
+	  .descContainer
+	  {
+		height: 30%;
+		h3{
+			
+		}
 	  }
 }
