--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -17,8 +17,15 @@
 	  {
 		position: absolute;
 		height: 30%;
+		padding-top: 15px;
 		h3{
-			
+			font-size: 1.5rem;#
+			text-align: center;
+		}
+		p {
+			font-size: 0.9rem;
+			padding-top: 10px;
+			text-align: center;
 		}
 	  }
 }
