--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -15,16 +15,17 @@
 	  
 	  .descContainer
 	  {
+		text-align: center;
 		width: 100%;
 		position: absolute;
 		height: 30%;
 		padding-top: 15px;
 		h3{
-			font-size: 1.5rem;
+			font-size: 1.3rem;
 			text-align: center;
 		}
 		p {
-			font-size: 0.9rem;
+			font-size: 0.8rem;
 			padding-top: 10px;
 			text-align: center;
 		}
