work site css border
bisschen verschönert

--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -20,12 +20,16 @@
 		position: absolute;
 		height: 30%;
 		padding-top: 15px;
+		border: 1px solid #203440;
+		margin-top: 5px;
 		h3{
-			font-size: 1.3rem;
+			font-size: 1.0rem;
 			text-align: center;
+			height: 30%;
+			border-bottom: 1px solid #1784c7;
 		}
 		p {
-			font-size: 0.8rem;
+			font-size: 0.7rem;
 			padding-top: 10px;
 			text-align: center;
 		}
