--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -20,7 +20,7 @@
 		position: absolute;
 		height: 30%;
 		padding-top: 15px;
-		border: 1px solid #203440;
+		border: 1px solid #424446;
 		margin-top: 5px;
 		h3{
 			font-size: 1.0rem;
@@ -35,6 +35,8 @@
 			font-size: 0.7rem;
 			padding-top: 10px;
 			text-align: center;
+      padding-left: 2px;
+      padding-right: 2px;
 		}
 	  }
 }
