--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -5,12 +5,18 @@
 	  li {
 		  width:33%;
 		  padding-top:100px;
-
+	
 		  .ytContainer {
 			width:95%;
 			height: 500px;
 			position: relative;
 		  }
+		   @include MQ(M) {
+			overflow: hidden;
+			overflow-y: auto;
+			width: 100%;
+			padding-top: 40px;
+						  }
 	  }
 
 	  .descContainer
