--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -7,12 +7,13 @@
 		  padding-top: 40px;
 	
 		  .ytContainer {
-			width:95%;
+		  @include MQ(X) {
+				width:95%;
+			}
 			height: 500px;
 			position: relative;
 		  }
 		   @include MQ(X) {
-			width:95%;
 			overflow: hidden;
 			overflow-y: auto;
 			width: 33%;
