--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -2,7 +2,7 @@
 	<li v-for="media in mediaList">
 
 	<div class="ytContainer">
-		<img :src="media.thumb" alt="" v-on:click="openMedia(media)" />
+		<img :src="media.url.thumb" alt="" v-on:click="openMedia(media)" />
 		<div class="descContainer">
 			<h3> \{{media.title}} </h3>
 			  <br />
