--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -1,8 +1,7 @@
 <ul class="media-list ytGrid">
-	<li v-for="media in mediaList">
-
+	<li v-for="media in mediaList" v-on:click="openMedia(media)">
 	<div class="ytContainer">
-		<img :src="media.url.thumb" alt="" v-on:click="openMedia(media)" />
+		<img :src="media.url.thumb" alt="" style="width:300px;" />
 		<div class="descContainer">
 			<h3> \{{media.title}} </h3>
 			  <br />
