--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -20,7 +20,11 @@
 			padding-top: 100px;
 						  }
 	  }
+    .videoThumb
+    {
+      width:100%;
 
+    }
 	  .descContainer
 	  {
 		text-align: center;
