--- a/src/sass/components/layer.scss
+++ b/src/sass/components/layer.scss
@@ -15,3 +15,13 @@
         top: $headerHeight;
     }
 }
+
+.videolayer {
+    position: absolute !important;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    height: 50%;
+    width:50%;
+    background-color: $color-background;
+}
