--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -35,6 +35,7 @@
       height: 250px;
       transition: .5s ease;
       backface-visibility: hidden;
+      cursor: pointer;
     }
 
     .playbuttonOnHover
@@ -42,7 +43,7 @@
       transition: .5s ease;
        opacity: 0;
        position: absolute;
-       top: 50%;
+       top: 25%;
        left: 50%;
        transform: translate(-50%, -50%);
        -ms-transform: translate(-50%, -50%);
