--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -47,7 +47,7 @@
        left: 50%;
        transform: translate(-50%, -50%);
        -ms-transform: translate(-50%, -50%);
-
+       cursor: pointer;
 
       div {
         background-color: #1784c7;
