--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -2,7 +2,7 @@
 	<li v-for="media in mediaList" >
 	<div class="ytContainer">
 		<img :src="media.url.thumb" alt="" class="videoThumb" v-on:click="openMedia(media)" />
-		<div class="playbuttonOnHover">
+		<div class="playbuttonOnHover" v-on:click="openMedia(media)">
     	<div>Play</div>
   	</div>
 		<div class="descContainer">
