--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -4,6 +4,7 @@
 	bottom: 1px;
 	width:100%;
 	height:20px;
+	text-align: center;
     /* background-color: $color-footer; */
 
     /* .logo { */
@@ -90,10 +91,8 @@
 
 .footerElement{
 	color:#fff;
-	position:relative;
 	padding: 1.0em .3em;
     font-size: 1.3em;
     text-decoration: none;
-	left: 50%;
-	transform: translate(-50%, -50%);
+
 }
