--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -19,12 +19,9 @@
 		<span class="close" v-on:click="closeMedia">
 				<i class="fa fa-times"></i>
 		</span>
-
-		<div class="preview">
-				<youtube :video-id="current.videoId" player-width="100%" player-height="100%"></youtube>
-		</div>
-		<div  class="description ">
+		<youtube :video-id="current.videoId" player-width="100%" player-height="100%"></youtube>
+		<!--<div  class="description ">
 				<h3>\{{current.title}}</h3>
 				<p>\{{current.description}} &nbsp;</p>
-		</div>
+		</div>-->
 </section>
