--- a/src/sass/components/layer.scss
+++ b/src/sass/components/layer.scss
@@ -21,7 +21,7 @@
     top:50%;
     left:50%;
     transform: translate(-50%, -50%);
-    height: 50%;
+    min-height: 50%;
     width:50%;
     background-color: $color-background;
 }
