--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -34,12 +34,12 @@ header {
                 font-size: 1.8em;
                 padding: .7em 1em;
             }
-			
+
         }
-		
+
     }
 
 }
 	.selectedMenuItem a{
-		color: #1784c7 !important;
+		color: $color-info !important;
 	}
