--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -69,6 +69,9 @@
 			font-size: 1.5em;
 			text-align: center;
 			height: 36%;
+      @include MQ(L) {
+          height: 26%;
+        }
       @include MQ(X) {
         height: 20%;
        }
