--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -72,7 +72,7 @@
       @include MQ(L) {
           height: 26%;
         }
-      @include MQ(X) {
+      @include MQ(XX) {
         height: 20%;
        }
 			border-bottom: 1px solid $color-info;
