--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -1,7 +1,10 @@
 .ytGrid {
       margin: auto;
 	  width:50%;
-
+	  max-width: 400px;
+		@include MQ(X) {
+		max-width: auto;
+		}
 	  li {
 		  width:100%;
 		  max-width:400px;
