Bildergröße und höhe

--- a/src/sass/components/media/show.scss
+++ b/src/sass/components/media/show.scss
@@ -25,9 +25,7 @@
 
         img {
             /* max-height: calc(100vh - 0px); */
-            max-width: 100%;
             border: 5px solid #000;
-			height:100%;
             transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
         }
     }
@@ -92,4 +90,12 @@
         }
     }
 
+}
+
+.portrait {
+  height:100%;
+}
+
+.landscape{
+  max-width:100%;
 }
