--- a/templates/page/contact.hbs
+++ b/templates/page/contact.hbs
@@ -6,7 +6,7 @@
                     <img src="/public/image/me.jpg" />
                 </div>
                 <div class="wdt-70">
-                    <p>You like my work and you are looking for a photographer? <br /> You need an expert in Photoshop?  <br />Or do you want to work together with me?<br />I will be appreciative for every request that you send. </p>
+                    <p>You like my work? <br /> Looking for a photographer or videographer?  <br />Don´t hesitate to contact me by mail or fill out the contact form beneath.<br />Chris </p>
                 </div>
             </div>
             <br />
