--- a/templates/page/discover.hbs
+++ b/templates/page/discover.hbs
@@ -1,7 +1,7 @@
 <ul class="media-list grid">
     <li class="grid-sizer"></li>
     <li v-for="media in mediaList" class="grid-item" v-on:click="openMedia(media)">
-	<img :src="media.url.thumb" :class="media.class" alt="" />
+	<img :src="media.url.thumb"  v-bind:class="media.class" alt="" />
     </li>
 </ul>
 
