--- a/templates/page/discover.hbs
+++ b/templates/page/discover.hbs
@@ -11,7 +11,7 @@
     </span>
 
     <div class="preview">
-        <img :src="current.url.full" v-bind:class="isPortrait ? portrait" alt="" />
+        <img :src="current.url.full" v-bind:class="current.isPortrait ? portrait" alt="" />
     </div>
     <div  class="description ">
         <h3>\{{current.title}}</h3>
