--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -6,7 +6,7 @@
 		}
 	  li {
 		  padding-top: 40px;
-
+      width: 100%;
 		  .ytContainer {
 
 		  @include MQ(X) {
@@ -32,7 +32,7 @@
       opacity: 1;
       display: block;
       width: 100%;
-      height: 250px;
+      height: calc(width/1.77);
       transition: .5s ease;
       backface-visibility: hidden;
       cursor: pointer;
