color blue to red

--- a/src/sass/settings.scss
+++ b/src/sass/settings.scss
@@ -4,7 +4,7 @@ $color-footer: #353535;
 $color-green: #92b000;
 $color-orange: #ffa800;
 $color-red: #c95335;
-$color-info: #1784c7;
+$color-info: #A14742;
 $color-grey: #efefef;
 $color-interact: #D7D7D7;
 
