--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -4,7 +4,9 @@
 	bottom: 1px;
 	width:100%;
 	height:20px;
-	text-align: center;
+	padding-left: 10px;
+text-align: start;
+
     /* background-color: $color-footer; */
 
     /* .logo { */
