--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -1,5 +1,5 @@
 header {
-    background-color: darken($color-background, 10%);
+    background:linear-gradient(to bottom, #060606, #201F1F 100%);
     height: $headerHeight;
     display: block;
     width: 100%;
