--- a/templates/page/work.hbs
+++ b/templates/page/work.hbs
@@ -14,7 +14,7 @@
 	</li>
 </ul>
 
-
+<div id="videoLayerBackground" v-show="current.url">
 <section id="previewContainer" class="videolayer media-show hiddenOnLoad" v-show="current.url">
 		<span class="close" v-on:click="closeMedia">
 				<i class="fa fa-times"></i>
