--- a/src/sass/components/layer.scss
+++ b/src/sass/components/layer.scss
@@ -17,11 +17,22 @@
 }
 
 .videolayer {
-    position: absolute !important;
+    position: fixed;
     top:50%;
     left:50%;
     transform: translate(-50%, -50%);
     min-height: 50%;
     width:50%;
     background-color: $color-background;
+    z-index:3;
+}
+
+#videoLayerBackground {
+position:absolute;
+height:100%;
+width:100%;
+background:black;
+opacity:.7;
+z-index:2;
+display:none;
 }
