--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -20,11 +20,11 @@
 						  }
 	  }
 
-    .ytContainer:hover .videoThumb {
+    .ytLayerOverThumbnail:hover .videoThumb {
       opacity: 0.3;
     }
 
-    .ytContainer:hover .playbuttonOnHover {
+    .ytLayerOverThumbnail:hover .playbuttonOnHover {
       opacity: 1;
     }
     .videoThumb
