--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -19,6 +19,11 @@
 			margin-top: 300px;
 						  }
 	  }
+    .ytLayerOverThumbnail{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
 
     .ytLayerOverThumbnail:hover .videoThumb {
       opacity: 0.3;
