--- a/templates/page/contact.hbs
+++ b/templates/page/contact.hbs
@@ -6,7 +6,7 @@
                     <img src="/public/image/me.jpg" />
                 </div>
                 <div class="wdt-70">
-                    <p>You like my work? <br /> Looking for a photographer or videographer?  <br /> <br /> Don´t hesitate to contact me by mail or fill out the contact form beneath.<br /> <br /> Chrizz </p>
+                    <p>You like my work? <br /> Looking for a photographer or videographer?  <br /> <br /> Don´t hesitate to contact me by mail or fill out the contact form below.<br /> <br /> Chrizz </p>
                 </div>
             </div>
             <br />
