--- a/src/sass/components/contact.scss
+++ b/src/sass/components/contact.scss
@@ -60,3 +60,14 @@
         width: 90%;
     }
 }
+
+.contactImage{
+  position: sticky;
+  left:22%;
+  width:50%;
+}
+
+.contactDescription{
+  padding-right:52px;
+  width:100%;
+}
