--- a/templates/page/contact.hbs
+++ b/templates/page/contact.hbs
@@ -2,10 +2,10 @@
     <div class="contact-wrapper">
         <form class="contact grd-1" onsubmit="return false;">
             <div class="row" style="border-bottom: 1px solid #404040; padding-bottom: .5em">
-                <div class="wdt-30">
+                <div class="contactImage">
                     <img src="/public/image/portraitSelf.jpg" />
                 </div>
-                <div class="wdt-70">
+                <div class="contactDescription">
                     <p>You like my work? <br /> Looking for a photographer or videographer?  <br /> <br /> Don´t hesitate to contact me by mail or fill out the contact form below.<br /> <br /> Chrizz </p>
                 </div>
             </div>
