--- a/src/sass/components/contact.scss
+++ b/src/sass/components/contact.scss
@@ -4,7 +4,7 @@
     p {
         width: 100%;
         display: block;
-        line-height: 1.4rem;
+        line-height: 2.0rem;
         font-size: 1rem;
         text-align: center;
         padding-bottom: 1.5em;
@@ -57,17 +57,15 @@
 
     img {
         border: 3px solid #000;
-        width: 90%;
+        width: 100%;
     }
 }
 
 .contactImage{
-  position: sticky;
-  left:22%;
+  margin: auto;
   width:50%;
 }
 
 .contactDescription{
-  padding-right:52px;
   width:100%;
 }
