--- a/src/sass/components/contact.scss
+++ b/src/sass/components/contact.scss
@@ -4,7 +4,7 @@
     p {
         width: 100%;
         display: block;
-        line-height: 2.0rem;
+        line-height: 1.4rem;
         font-size: 1rem;
         text-align: center;
         padding-bottom: 1.5em;
@@ -57,15 +57,17 @@
 
     img {
         border: 3px solid #000;
-        width: 100%;
+        width: 90%;
     }
 }
 
 .contactImage{
-  margin: auto;
+  position: sticky;
+  left:22%;
   width:50%;
 }
 
 .contactDescription{
+  padding-right:52px;
   width:100%;
 }
