--- a/templates/page/contact.hbs
+++ b/templates/page/contact.hbs
@@ -3,7 +3,7 @@
         <form class="contact grd-1" onsubmit="return false;">
             <div class="row" style="border-bottom: 1px solid #404040; padding-bottom: .5em">
                 <div class="wdt-30">
-                    <img src="/public/image/portraitSelf.jpg" />
+                    <img src="/public/image/me.jpg" />
                 </div>
                 <div class="wdt-70">
                     <p>You like my work? <br /> Looking for a photographer or videographer?  <br /> <br /> Don´t hesitate to contact me by mail or fill out the contact form below.<br /> <br /> Chrizz </p>
