--- a/src/sass/components/media/list.scss
+++ b/src/sass/components/media/list.scss
@@ -8,6 +8,7 @@
         width: 33.3333%;
     }
     height: auto;
+    border:1px solid;
     position: relative;
     span {
         position: absolute;
