--- a/src/sass/components/media/show.scss
+++ b/src/sass/components/media/show.scss
@@ -25,7 +25,7 @@
 
         img {
             /* max-height: calc(100vh - 0px); */
-            border: 5px solid #000;
+            border: 2px solid;
             max-width:100%;
             transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
         }
