--- a/templates/page/welcome.hbs
+++ b/templates/page/welcome.hbs
@@ -1,7 +1,7 @@
 <section class="full">
     <section class="full layer" data-depth="0.30" style="background-image: url('/public/image/nightstreet.jpg')">
 
-        <img src="/public/svg/logo.svg" class="logo" alt="christopher fey" />
+        <img src="/public/svg/logo1.svg" class="logo" alt="christopher fey" />
 
         <nav class="menu">
             <ul class="layer" data-depth="0.10">
