--- a/templates/page/discover.hbs
+++ b/templates/page/discover.hbs
@@ -13,7 +13,7 @@
     <div class="preview">
         <img :src="current.url.full" v-bind:class="{ portrait: current.isPortrait }" alt="" />
     </div>
-    <div  class="description ">
+    <!--<div  class="description ">
         <h3>\{{current.title}}</h3>
         <p>\{{current.description}} &nbsp;</p>
         <div class="details">
@@ -41,4 +41,5 @@
             </ul>
         </div>
     </div>
+    -->
 </section>
