--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -52,6 +52,10 @@
        opacity: 0;
        position: absolute;
        cursor: pointer;
+       top: 50%;
+       margin-top: -20px;
+       margin-left: -43px;
+       left: 50%;
 
       div {
         background-color: $color-info;
