--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -71,7 +71,13 @@
 		text-align: center;
 		width: 100%;
 		position: absolute;
-		height: 100%;
+		  height: 100%;
+      @include MQ(MLANDSCAPE) {
+        height: 36%;
+      }
+    @include MQ(X) {
+      height: 36%;
+    }
 		padding-top: 15px;
 	/*	border: 1px solid #424446; */
 		margin-top: 5px;
