--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -16,10 +16,15 @@
 			}
 
 			position: relative;
+      @include MQ(L) {
+    margin-top: 105px;
+            }
 		  }
 		   @include MQ(X) {
 			margin-top: 300px;
 						  }
+
+
 	  }
     .ytLayerOverThumbnail{
       display: flex;
