--- a/src/sass/components/form/ytGrid.scss
+++ b/src/sass/components/form/ytGrid.scss
@@ -16,6 +16,12 @@
 			}
 
 			position: relative;
+
+      @include MQ(M) {
+      margin-top: 65px;
+            }
+      }
+
       @include MQ(L) {
     margin-top: 105px;
             }
