--- a/src/sass/components/media/show.scss
+++ b/src/sass/components/media/show.scss
@@ -29,6 +29,7 @@
             /* max-height: calc(100vh - 0px); */
             border: 2px solid;
             height: 100%;
+            @include MQ(MPORTRAIT) {height: auto;}
             max-width:100%;
             transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
         }
