--- a/templates/page/contact.hbs
+++ b/templates/page/contact.hbs
@@ -12,11 +12,11 @@
             </div>
             <br />
 
-            <div class="notice-error hiddenOnLoad" v-show="error">
+            <div id='notice-error' class="notice-error hiddenOnLoad" v-show="error">
                 <p>You have to fill all fields.</p>
             </div>
 
-            <div class="notice-success hiddenOnLoad" v-show="success">
+            <div id='notice-success' class="notice-success hiddenOnLoad" v-show="success">
                 <p>Mail was sent. I get in touch with you!</p>
             </div>
 
